# multi-agent-stock-screener

./: .gitignore  README.md  pyproject.toml
configs/: env.toml.dist
src/stock_recommender/: runnable.py
src/stock_recommender/agents/agent_core/agent/: base_agent.py
src/stock_recommender/agents/agent_core/finance_mcp/: main.py
src/stock_recommender/utils/: read_env_vars.py
src/stock_screener/: app.py
src/stock_screener/a2a_client/: host_agent.py  main.py  remote_agent_connection.py  test_client.py
src/stock_screener/a2a_server/: agent_card.py  agent_executor.py  server.py  technical_analyst_agent.py
src/stock_screener/agents/: main_agent.py
src/stock_screener/streamlit_app/: README.md  app.py  runnable.py  screener_agent.py
src/stock_screener/utils/: paths.py  read_env_vars.py
